bdr.BDR2.scala.error
Erreur de compilation :
BDR2:6: error: not enough arguments for method apply: (index: Int)Char in class StringOps.
Unspecified value parameter index.
  var lecture: String=lecture();
                             ^